$Id$

Denora v1.4.4-SVN
-----------------

Additions
n/a

Changes
09/09/03 r304 Updated GeoIP.dat

Fixes
09/09/03 r305 Denora now warns and exits on missing config for Hybrid [closes #563]
09/08/24 r303 Fixed inspircd12 not sending ts6sid on ENDBURST
09/07/27 r293 [1] Fixed first channel users not getting +o on nefarious [closes #557]
09/07/02 r291 [1] Fixed nefarious not adding some exceptions at burst [closes #555]
09/05/26 r289 Fixed weekly cron removing ignored records from chanstats
09/05/17 r287 [1] Fixed nefarious MODE message handling [closes #548]
09/05/16 r286 Fixed autoop not working anymore on chanstats add [closes #547]
09/05/07 r286 Fixed segfault on broken configuration file
09/05/04 r285 Fixed inspircd12 requiring usermode +S [closes #545]
09/05/03 r283 Fixed ngircd handling of NICK and SERVER messages
09/05/03 r282 Reverted r267 which broke things on channels without modes
09/05/03 r281 Fixed crash when setting debug 2 with logchan enabled [closes #539]
09/04/27 r281 Fixed UMODE r change in Plexus3 [closes #543]
09/04/21 r279 Fixed inspircd ADDLINE using wrong timestamp [closes #542] 
09/04/21 r279 Removed handling of SVSNICK from inspircd modules [closes #540]
09/03/24 r278 Fixed crash on missing channel mode parameter

Removals
09/07/29 r293 Removed dm script and version.log files

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Jobe <jobe@mdbnet.co.uk>


Denora v1.4.3
-------------

Additions
09/03/04 r266 Added support for nick change flood chanmode
09/02/25 r257 Improved nick tracking on nick change for +r users
09/02/22 r250 Added InspIRCd 1.2 support [closes #527]

Changes
09/03/10 r270 Updated GeoIP.dat
09/02/22 r249 CTCP VERSION is now handled by alias if present

Fixes
09/03/15 r273 Fixed crash on incoming global notice (introduced in r249)
09/03/13 r272 Fixed autoop not working properly with partonempty disabled
09/03/13 r272 Fixed crash on restart/shutdown with partonempty enabled