@@ -10,6 +10,8 @@ Changes
 09/09/03 r304 Updated GeoIP.dat
 
 Fixes
+09/09/03 r306 Implemented nefarious CM mode handling
+09/09/03 r306 [1] Fixed hostname priority in nefarious nick handling
 09/09/03 r305 Denora now warns and exits on missing config for Hybrid [closes #563]
 09/08/24 r303 Fixed inspircd12 not sending ts6sid on ENDBURST
 09/07/27 r293 [1] Fixed first channel users not getting +o on nefarious [closes #557]
